@@ -20,6 +20,11 @@ package org.apache.fineract.integrationtests;
 
 import static org.junit.Assert.assertEquals;
 
+import io.restassured.builder.RequestSpecBuilder;
+import io.restassured.builder.ResponseSpecBuilder;
+import io.restassured.http.ContentType;
+import io.restassured.specification.RequestSpecification;
+import io.restassured.specification.ResponseSpecification;
 import java.text.DateFormat;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
@@ -30,7 +35,6 @@ import java.util.Calendar;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
-
 import org.apache.fineract.accounting.common.AccountingConstants.FINANCIAL_ACTIVITY;
 import org.apache.fineract.integrationtests.common.ClientHelper;
 import org.apache.fineract.integrationtests.common.CommonConstants;
@@ -39,11 +43,11 @@ import org.apache.fineract.integrationtests.common.TaxComponentHelper;
 import org.apache.fineract.integrationtests.common.TaxGroupHelper;
 import org.apache.fineract.integrationtests.common.Utils;
 import org.apache.fineract.integrationtests.common.accounting.Account;
+import org.apache.fineract.integrationtests.common.accounting.Account.AccountType;
 import org.apache.fineract.integrationtests.common.accounting.AccountHelper;
 import org.apache.fineract.integrationtests.common.accounting.FinancialActivityAccountHelper;
 import org.apache.fineract.integrationtests.common.accounting.JournalEntry;
 import org.apache.fineract.integrationtests.common.accounting.JournalEntryHelper;
-import org.apache.fineract.integrationtests.common.accounting.Account.AccountType;
 import org.apache.fineract.integrationtests.common.fixeddeposit.FixedDepositAccountStatusChecker;
 import org.apache.fineract.integrationtests.common.recurringdeposit.RecurringDepositAccountHelper;
 import org.apache.fineract.integrationtests.common.recurringdeposit.RecurringDepositAccountStatusChecker;
@@ -57,12 +61,6 @@ import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
-
-import com.jayway.restassured.builder.RequestSpecBuilder;
-import com.jayway.restassured.builder.ResponseSpecBuilder;
-import com.jayway.restassured.http.ContentType;
-import com.jayway.restassured.specification.RequestSpecification;
-import com.jayway.restassured.specification.ResponseSpecification;
 
 @SuppressWarnings({ "unused", "rawtypes", "unchecked", "static-access" })
 public class RecurringDepositTest {
@@ -150,7 +148,7 @@ public class RecurringDepositTest {
         final String EXPECTED_FIRST_DEPOSIT_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String MONTH_DAY = monthDayFormat.format(todaysDate.getTime());
 
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer numberOfDaysLeft = (daysInMonth - currentDate) + 1;
         todaysDate.add(Calendar.DATE, numberOfDaysLeft);
@@ -302,7 +300,7 @@ public class RecurringDepositTest {
         final String EXPECTED_FIRST_DEPOSIT_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String MONTH_DAY = monthDayFormat.format(todaysDate.getTime());
 
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer numberOfDaysLeft = (daysInMonth - currentDate) + 1;
         todaysDate.add(Calendar.DATE, numberOfDaysLeft);
@@ -478,7 +476,7 @@ public class RecurringDepositTest {
         this.accountHelper = new AccountHelper(this.requestSpec, this.responseSpec);
         this.savingsAccountHelper = new SavingsAccountHelper(this.requestSpec, this.responseSpec);
         this.recurringDepositAccountHelper = new RecurringDepositAccountHelper(this.requestSpec, this.responseSpec);
-        
+
 
         /***
          * Create GL Accounts for product account mapping
@@ -507,7 +505,7 @@ public class RecurringDepositTest {
         final String EXPECTED_FIRST_DEPOSIT_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String MONTH_DAY = monthDayFormat.format(todaysDate.getTime());
 
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer numberOfDaysLeft = (daysInMonth - currentDate) + 1;
         todaysDate.add(Calendar.DATE, numberOfDaysLeft);
@@ -611,7 +609,7 @@ public class RecurringDepositTest {
         Integer transactionIdForPostInterest = this.recurringDepositAccountHelper
                 .postInterestForRecurringDeposit(recurringDepositAccountId);
         Assert.assertNotNull(transactionIdForPostInterest);
-        
+
 
         HashMap accountSummary = this.recurringDepositAccountHelper.getRecurringDepositSummary(recurringDepositAccountId);
         Float totalInterestPosted = (Float) accountSummary.get("totalInterestPosted");
@@ -694,7 +692,7 @@ public class RecurringDepositTest {
         this.accountHelper = new AccountHelper(this.requestSpec, this.responseSpec);
         this.savingsAccountHelper = new SavingsAccountHelper(this.requestSpec, this.responseSpec);
         this.recurringDepositAccountHelper = new RecurringDepositAccountHelper(this.requestSpec, this.responseSpec);
-        
+
 
         /***
          * Create GL Accounts for product account mapping
@@ -723,7 +721,7 @@ public class RecurringDepositTest {
         final String EXPECTED_FIRST_DEPOSIT_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String MONTH_DAY = monthDayFormat.format(todaysDate.getTime());
 
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer numberOfDaysLeft = (daysInMonth - currentDate) + 1;
         todaysDate.add(Calendar.DATE, numberOfDaysLeft);
@@ -810,7 +808,7 @@ public class RecurringDepositTest {
          */
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.MONTH, -20);
-        
+
         for (int i = 0; i < 14; i++) {
             Integer depositTransactionId = this.recurringDepositAccountHelper.depositToRecurringDepositAccount(recurringDepositAccountId,
                     depositAmount, dateFormat.format(todaysDate.getTime()));
@@ -826,20 +824,20 @@ public class RecurringDepositTest {
         /***
          * FD account verify whether account is matured
          */
-        
+
         SchedulerJobHelper schedulerJobHelper =  new SchedulerJobHelper(requestSpec, responseSpec);
         String JobName = "Update Deposit Accounts Maturity details";
         schedulerJobHelper.executeJob(JobName);
-        
+
         HashMap accountDetails = this.recurringDepositAccountHelper.getRecurringDepositAccountById(this.requestSpec, this.responseSpec,
                 recurringDepositAccountId);
-        
+
         HashMap summary = (HashMap) accountDetails.get("summary");
         Assert.assertNotNull(summary.get("totalWithholdTax"));
         Float withHoldTax = (Float) summary.get("totalWithholdTax");
         this.journalEntryHelper.checkJournalEntryForLiabilityAccount(liabilityAccountForTax, CLOSED_ON_DATE, new JournalEntry(withHoldTax,
                 JournalEntry.TransactionType.CREDIT));
-        
+
 
         recurringDepositAccountStatusHashMap = RecurringDepositAccountStatusChecker.getStatusOfRecurringDepositAccount(this.requestSpec,
                 this.responseSpec, recurringDepositAccountId.toString());
@@ -849,7 +847,7 @@ public class RecurringDepositTest {
     }
 
 
-    
+
     /***
      * Test case for Recurring Deposit Account premature closure with
      * transaction type ReInvest and Cash Based accounting enabled
@@ -890,7 +888,7 @@ public class RecurringDepositTest {
         final String EXPECTED_FIRST_DEPOSIT_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String MONTH_DAY = monthDayFormat.format(todaysDate.getTime());
 
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer numberOfDaysLeft = (daysInMonth - currentDate) + 1;
         todaysDate.add(Calendar.DATE, numberOfDaysLeft);
@@ -1376,7 +1374,7 @@ public class RecurringDepositTest {
 
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.MONTH, -1);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         todaysDate.add(Calendar.DATE, -(currentDate - 1));
         final String SUBMITTED_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String APPROVED_ON_DATE = dateFormat.format(todaysDate.getTime());
@@ -1456,7 +1454,7 @@ public class RecurringDepositTest {
 
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.MONTH, -1);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         todaysDate.add(Calendar.DATE, -(currentDate - 1));
         final String SUBMITTED_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String APPROVED_ON_DATE = dateFormat.format(todaysDate.getTime());
@@ -1593,7 +1591,7 @@ public class RecurringDepositTest {
         DecimalFormat decimalFormat = new DecimalFormat("", new DecimalFormatSymbols(Locale.US));
         decimalFormat.applyPattern(".");
 
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         daysInMonth = (daysInMonth - currentDate) + 1;
         Float interestToBePosted = new Float(decimalFormat.format(interestPerDay * principal * daysInMonth));
@@ -1700,7 +1698,7 @@ public class RecurringDepositTest {
 
         Calendar calendar = Calendar.getInstance();
         calendar.add(Calendar.MONTH, -1);
-        Integer currentDate = new Integer(currentDateFormat.format(calendar.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(calendar.getTime()));
         Integer daysInMonth = calendar.getActualMaximum(Calendar.DATE);
         daysInMonth = (daysInMonth - currentDate) + 1;
         Float interestPerMonth = (float) (interestPerDay * principal * daysInMonth);
@@ -1832,7 +1830,7 @@ public class RecurringDepositTest {
 
         Calendar calendar = Calendar.getInstance();
         calendar.add(Calendar.MONTH, -1);
-        Integer currentDate = new Integer(currentDateFormat.format(calendar.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(calendar.getTime()));
         Integer daysInMonth = calendar.getActualMaximum(Calendar.DATE);
         daysInMonth = (daysInMonth - currentDate) + 1;
         Float interestPerMonth = (float) (interestPerDay * principal * daysInMonth);
@@ -1972,7 +1970,7 @@ public class RecurringDepositTest {
         Calendar calendar = Calendar.getInstance();
         calendar.add(Calendar.MONTH, -1);
         calendar.add(Calendar.DAY_OF_MONTH, -1);
-        Integer currentDate = new Integer(currentDateFormat.format(calendar.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(calendar.getTime()));
         Integer daysInMonth = calendar.getActualMaximum(Calendar.DATE);
         daysInMonth = (daysInMonth - currentDate) + 1;
         Float interestPerMonth = (float) (interestPerDay * principal * daysInMonth);
@@ -2117,7 +2115,7 @@ public class RecurringDepositTest {
         Calendar calendar = Calendar.getInstance();
         calendar.add(Calendar.MONTH, -1);
         calendar.add(Calendar.DAY_OF_MONTH, -1);
-        Integer currentDate = new Integer(currentDateFormat.format(calendar.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(calendar.getTime()));
         Integer daysInMonth = calendar.getActualMaximum(Calendar.DATE);
         daysInMonth = (daysInMonth - currentDate) + 1;
         Float interestPerMonth = (float) (interestPerDay * principal * daysInMonth);
@@ -2180,7 +2178,7 @@ public class RecurringDepositTest {
 
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.MONTH, -1);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         todaysDate.add(Calendar.DATE, -(currentDate - 1));
         final String SUBMITTED_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String APPROVED_ON_DATE = dateFormat.format(todaysDate.getTime());
@@ -2264,7 +2262,7 @@ public class RecurringDepositTest {
 
         todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.MONTH, -1);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         todaysDate.add(Calendar.DATE, -(currentDate - 1));
         final String SUBMITTED_ON_DATE = dateFormat.format(todaysDate.getTime());
         final String APPROVED_ON_DATE = dateFormat.format(todaysDate.getTime());
@@ -2346,10 +2344,10 @@ public class RecurringDepositTest {
 
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.YEAR, -1);
-        Integer currentMonth = new Integer(currentMonthFormat.format(todaysDate.getTime()));
+        Integer currentMonth = Integer.valueOf(currentMonthFormat.format(todaysDate.getTime()));
         Integer numberOfMonths = 12 - currentMonth;
         todaysDate.add(Calendar.MONTH, numberOfMonths);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer daysLeft = daysInMonth - currentDate;
         todaysDate.add(Calendar.DATE, (daysLeft + 1));
@@ -2437,10 +2435,10 @@ public class RecurringDepositTest {
 
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.YEAR, -1);
-        Integer currentMonth = new Integer(currentMonthFormat.format(todaysDate.getTime()));
+        Integer currentMonth = Integer.valueOf(currentMonthFormat.format(todaysDate.getTime()));
         Integer numberOfMonths = 12 - currentMonth;
         todaysDate.add(Calendar.MONTH, numberOfMonths);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer daysLeft = daysInMonth - currentDate;
         todaysDate.add(Calendar.DATE, (daysLeft + 1));
@@ -2527,10 +2525,10 @@ public class RecurringDepositTest {
         Calendar todaysDate = Calendar.getInstance();
 
         todaysDate.add(Calendar.YEAR, -1);
-        Integer currentMonth = new Integer(currentMonthFormat.format(todaysDate.getTime()));
+        Integer currentMonth = Integer.valueOf(currentMonthFormat.format(todaysDate.getTime()));
         Integer numberOfMonths = 12 - currentMonth;
         todaysDate.add(Calendar.MONTH, numberOfMonths);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer daysLeft = daysInMonth - currentDate;
         todaysDate.add(Calendar.DATE, (daysLeft + 1));
@@ -2618,10 +2616,10 @@ public class RecurringDepositTest {
         Calendar todaysDate = Calendar.getInstance();
 
         todaysDate.add(Calendar.YEAR, -1);
-        Integer currentMonth = new Integer(currentMonthFormat.format(todaysDate.getTime()));
+        Integer currentMonth = Integer.valueOf(currentMonthFormat.format(todaysDate.getTime()));
         Integer numberOfMonths = 12 - currentMonth;
         todaysDate.add(Calendar.MONTH, numberOfMonths);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer daysLeft = daysInMonth - currentDate;
         todaysDate.add(Calendar.DATE, (daysLeft + 1));
@@ -2710,10 +2708,10 @@ public class RecurringDepositTest {
 
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.YEAR, -1);
-        Integer currentMonth = new Integer(currentMonthFormat.format(todaysDate.getTime()));
+        Integer currentMonth = Integer.valueOf(currentMonthFormat.format(todaysDate.getTime()));
         Integer numberOfMonths = 12 - currentMonth;
         todaysDate.add(Calendar.MONTH, numberOfMonths);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer daysLeft = daysInMonth - currentDate;
         todaysDate.add(Calendar.DATE, (daysLeft + 1));
@@ -2801,10 +2799,10 @@ public class RecurringDepositTest {
 
         Calendar todaysDate = Calendar.getInstance();
         todaysDate.add(Calendar.YEAR, -1);
-        Integer currentMonth = new Integer(currentMonthFormat.format(todaysDate.getTime()));
+        Integer currentMonth = Integer.valueOf(currentMonthFormat.format(todaysDate.getTime()));
         Integer numberOfMonths = 12 - currentMonth;
         todaysDate.add(Calendar.MONTH, numberOfMonths);
-        Integer currentDate = new Integer(currentDateFormat.format(todaysDate.getTime()));
+        Integer currentDate = Integer.valueOf(currentDateFormat.format(todaysDate.getTime()));
         Integer daysInMonth = todaysDate.getActualMaximum(Calendar.DATE);
         Integer daysLeft = daysInMonth - currentDate;
         todaysDate.add(Calendar.DATE, (daysLeft + 1));
@@ -2882,7 +2880,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(6.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithPeriodInterestRateChart_AMOUNT_VARIATION() {
         final String chartToUse = "period";
@@ -2891,7 +2889,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(6.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithPeriodInterestRateChart_PERIOD_VARIATION() {
         final String chartToUse = "period";
@@ -2900,7 +2898,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(7.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithAmountInterestRateChart() {
         final String chartToUse = "amount";
@@ -2909,7 +2907,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(8.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithAmountInterestRateChart_AMOUNT_VARIATION() {
         final String chartToUse = "amount";
@@ -2918,7 +2916,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(7.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithAmountInterestRateChart_PERIOD_VARIATION() {
         final String chartToUse = "amount";
@@ -2927,7 +2925,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(5.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithPeriodAndAmountInterestRateChart() {
         final String chartToUse = "period_amount";
@@ -2936,7 +2934,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(7.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithPeriodAndAmountInterestRateChart_AMOUNT_VARIATION() {
         final String chartToUse = "period_amount";
@@ -2945,7 +2943,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(6.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithPeriodAndAmountInterestRateChart_PERIOD_VARIATION() {
         final String chartToUse = "period_amount";
@@ -2954,7 +2952,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(8.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithAmountAndPeriodInterestRateChart() {
         final String chartToUse = "amount_period";
@@ -2963,7 +2961,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(8.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithAmountAndPeriodInterestRateChart_AMOUNT_VARIATION() {
         final String chartToUse = "amount_period";
@@ -2972,7 +2970,7 @@ public class RecurringDepositTest {
         final Float interestRate = new Float(6.0);
         testFixedDepositAccountForInterestRate(chartToUse, depositAmount, depositPeriod, interestRate);
     }
-    
+
     @Test
     public void testRecurringDepositAccountWithAmountAndPeriodInterestRateChart_PERIOD_VARIATION() {
         final String chartToUse = "amount_period";
@@ -3049,7 +3047,7 @@ public class RecurringDepositTest {
         final String recurringDepositProductJSON = recurringDepositProductHelper.withPeriodRangeChart().build(validFrom, validTo);
         return RecurringDepositProductHelper.createRecurringDepositProduct(recurringDepositProductJSON, requestSpec, responseSpec);
     }
-    
+
     private Integer createRecurringDepositProductWithWithHoldTax(final String validFrom, final String validTo,final String taxGroupId, final String accountingRule,
             Account... accounts) {
         System.out.println("------------------------------CREATING NEW RECURRING DEPOSIT PRODUCT ---------------------------------------");
@@ -3186,7 +3184,7 @@ public class RecurringDepositTest {
         Assert.assertEquals(financialActivityId, ((HashMap) mappingDetails.get("financialActivityData")).get("id"));
         Assert.assertEquals(glAccount.getAccountID(), ((HashMap) mappingDetails.get("glAccountData")).get("id"));
     }
-    
+
     private Integer createTaxGroup(final String percentage, final Account liabilityAccountForTax){
         final Integer liabilityAccountId = liabilityAccountForTax.getAccountID();
         final Integer taxComponentId = TaxComponentHelper.createTaxComponent(this.requestSpec, this.responseSpec, percentage, liabilityAccountId);
