@@ -21,7 +21,6 @@ package org.apache.fineract.accounting.journalentry.data;
 import java.math.BigDecimal;
 import java.util.Date;
 import java.util.List;
-
 import org.apache.fineract.infrastructure.core.data.EnumOptionData;
 import org.apache.fineract.portfolio.client.domain.ClientTransactionType;
 
@@ -87,7 +86,7 @@ public class ClientTransactionDTO {
     }
 
     public boolean isChargePayment() {
-        return ClientTransactionType.PAY_CHARGE.getValue().equals(new Integer(this.transactionType.getId().intValue()));
+        return ClientTransactionType.PAY_CHARGE.getValue().equals(Integer.valueOf(this.transactionType.getId().intValue()));
     }
 
     public String getCurrencyCode() {
