@@ -20,10 +20,12 @@ package org.apache.fineract.infrastructure.hooks.processor;
 
 import static org.apache.fineract.infrastructure.hooks.api.HookApiConstants.apiKeyName;
 
+import com.google.gson.Gson;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
-
 import org.apache.fineract.infrastructure.hooks.domain.Hook;
 import org.apache.fineract.infrastructure.hooks.domain.HookConfiguration;
 import org.apache.fineract.infrastructure.hooks.domain.HookConfigurationRepository;
@@ -35,12 +37,7 @@ import org.apache.fineract.useradministration.domain.AppUser;
 import org.codehaus.jackson.map.ObjectMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import retrofit.Callback;
-
-import com.google.gson.Gson;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
 
 @Service
 public class TwilioHookProcessor implements HookProcessor {
@@ -126,7 +123,7 @@ public class TwilioHookProcessor implements HookProcessor {
                     payload, HashMap.class);
             map.put("BASE_URI", System.getProperty("baseUrl"));
             if (map.containsKey("clientId")) {
-                final Long clientId = new Long(Integer.toString((int) map
+                final Long clientId = Long.valueOf(Integer.toString((int) map
                         .get("clientId")));
                 final Client client = this.clientRepositoryWrapper.findOneWithNotFoundDetection(clientId);
                 final String mobileNo = client.mobileNo();
