@@ -27,7 +27,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
 import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.FetchType;
@@ -36,7 +35,6 @@ import javax.persistence.OneToMany;
 import javax.persistence.Table;
 import javax.persistence.Temporal;
 import javax.persistence.TemporalType;
-
 import org.apache.commons.lang.StringUtils;
 import org.apache.fineract.infrastructure.core.api.JsonCommand;
 import org.apache.fineract.infrastructure.core.data.ApiParameterError;
@@ -49,18 +47,12 @@ import org.apache.fineract.portfolio.calendar.exception.CalendarDateException;
 import org.apache.fineract.portfolio.calendar.exception.CalendarParameterUpdateNotSupportedException;
 import org.apache.fineract.portfolio.calendar.service.CalendarUtils;
 import org.apache.fineract.portfolio.common.domain.NthDayType;
-import org.apache.fineract.useradministration.domain.AppUser;
-import org.apache.poi.openxml4j.util.Nullable;
 import org.joda.time.LocalDate;
 import org.joda.time.LocalDateTime;
-import org.joda.time.LocalTime;
-
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
 
 @Entity
 @Table(name = "m_calendar")
-public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
+public class Calendar extends AbstractAuditableCustom {
 
     @Column(name = "title", length = 50, nullable = false)
     private String title;
@@ -99,11 +91,11 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
 
     @Column(name = "second_reminder", nullable = true)
     private Integer secondReminder;
-    
+
     @Column(name="meeting_time",nullable=true)
     @Temporal(TemporalType.TIME)
     private Date meetingtime;
-    
+
     @OneToMany(fetch = FetchType.EAGER)
     @JoinColumn(name = "calendar_id")
     private Set<CalendarHistory> calendarHistory = new HashSet<>();
@@ -406,7 +398,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
             actualChanges.put(secondRemindarParamName, newValue);
             this.secondReminder = newValue;
         }
-        
+
         final String timeFormat = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.Time_Format.getValue());
         final String time = CALENDAR_SUPPORTED_PARAMETERS.MEETING_TIME.getValue();
         if (command.isChangeInTimeParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.MEETING_TIME.getValue(), this.meetingtime,timeFormat)) {
@@ -416,9 +408,9 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
             if(timeInLocalDateTimeFormat!=null){
             this.meetingtime= timeInLocalDateTimeFormat.toDate();
             }
-           
+
         }
-        
+
         return actualChanges;
     }
 
@@ -427,7 +419,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
             final Integer interval, final Integer repeatsOnDay, final Integer repeatsOnNthDay) {
         final Map<String, Object> actualChanges = new LinkedHashMap<>(9);
 
-        if (calendarStartDate != null & this.startDate != null) {
+        if (calendarStartDate != null && this.startDate != null) {
             if (!calendarStartDate.equals(this.getStartDateLocalDate())) {
                 actualChanges.put("startDate", calendarStartDate);
                 this.startDate = calendarStartDate.toDate();
@@ -489,7 +481,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
     public Integer getSecondReminder() {
         return this.secondReminder;
     }
-    
+
     public Date getMeetingTime(){
         return this.meetingtime;
     }
@@ -609,12 +601,12 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
             }
         }
         if (frequencyType.isMonthly()) {
-            if (repeatsOnNthDayOfMonth != null && (repeatsOnDay == null || repeatsOnDay == CalendarWeekDaysType.INVALID.getValue())) {
+            if (repeatsOnNthDayOfMonth != null && (repeatsOnDay == null || repeatsOnDay.equals(CalendarWeekDaysType.INVALID.getValue()))) {
                 if (repeatsOnNthDayOfMonth >= -1 && repeatsOnNthDayOfMonth <= 28) {
                     recurrenceBuilder.append(";BYMONTHDAY=");
                     recurrenceBuilder.append(repeatsOnNthDayOfMonth);
                 }
-            } else if (repeatsOnNthDayOfMonth != null && repeatsOnDay != null && repeatsOnDay != CalendarWeekDaysType.INVALID.getValue()) {
+            } else if (repeatsOnNthDayOfMonth != null && repeatsOnDay != null && !repeatsOnDay.equals(CalendarWeekDaysType.INVALID.getValue())) {
                 final NthDayType nthDay = NthDayType.fromInt(repeatsOnNthDayOfMonth);
                 if (!nthDay.isInvalid()) {
                     recurrenceBuilder.append(";BYSETPOS=");
@@ -647,7 +639,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
     public void updateStartAndEndDate(final LocalDate startDate, final LocalDate endDate) {
 
         final CalendarFrequencyType frequencyType = CalendarUtils.getFrequency(this.recurrence);
-        final Integer interval = new Integer(CalendarUtils.getInterval(this.recurrence));
+        final Integer interval = Integer.valueOf(CalendarUtils.getInterval(this.recurrence));
         final String newRecurrence = Calendar.constructRecurrence(frequencyType, interval, startDate.getDayOfWeek(), null);
 
         this.recurrence = newRecurrence;
